--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-nice-select": "^1.0.4",
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
+    "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
   }
